# basic-paxos-rs

./: Cargo.toml  README.md
src/: acceptor.rs  lib.rs  proposer.rs
src/core/: message.rs
src/net/: client.rs  driver.rs  mod.rs  server.rs
