[package]
name = "basic-paxos-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#tokio = { version="1.18.2", features=["full"]}
bincode = "2.0.0-rc.1"

[dependencies.serde]
version="1"
features=["derive"]
